test/libyul/yulSyntaxTests/dot_ellipse_function_arg.yul
{
    function x(a...b) {}
}
// ----
// TypeError 7771: (17-22): "a...b" is not a valid identifier (contains consecutive dots).
